[package]
name = "rust_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "*"}
gstreamer = "0.24.2"
gstreamer-app = "0.24.2"
gstreamer-audio = "0.24.2"
gstreamer-video = "0.24.2"
glib = "0.21.3"
derive_more = { version = "2", features = ["display", "error"] }
byte-slice-cast = "1"


[dependencies.rclrs]
version = "*"

[dependencies.std_msgs]
version = "*"

[dependencies.sensor_msgs]
version = "*"


[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[[bin]]
name = "udppublisher"
path = "src/udppublisher.rs"

[[bin]]
name = "audiopipeline"
path = "src/audiopipeline.rs"

[[bin]]
name = "deadsimple"
path = "src/deadsimple.rs"

[package.metadata.ros]
install_to_share = ["launch"]